[package]
name = "diagonator-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
toml_edit = { version = "0.14", features = ["easy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1"
lazy_static = "1.4.0"
axum = "0.7.5"
socketioxide = "0.14.0"
tokio = { version = "1.39.2", features = ["full"] }
